hphp/hack/test/typecheck/lambda/lambda_apply2.php.like_types.exp
File "lambda_apply2.php", line 25, characters 13-14:
Invalid argument (Typing[4110])
File "lambda_apply2.php", line 24, characters 34-35:
Expected TA
File "lambda_apply2.php", line 24, characters 47-48:
But got dynamic because it is an unenforceable type
